third_party/move/move-compiler-v2/tests/more-v1/expansion/friend_decl_nonexistent_alias.exp

Diagnostics:
error: unbound module
  ┌─ tests/more-v1/expansion/friend_decl_nonexistent_alias.move:3:12
  │
3 │     friend Nonexistent;
  │            ^^^^^^^^^^^ Unbound module alias 'Nonexistent'
